data/derived/comb/progs/unify/prog5817.ml.out
Characters 177-181:
  let (res) = List.fold_left f base args in
                                    ^^^^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
